--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --port 3000 --hostname 0.0.0.0",
     "build": "next build",
     "start": "next start --port 3000 --hostname 0.0.0.0",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write **/*.{js,jsx,ts,tsx,json,md,css}"
   },
   "dependencies": {
     "next": "^15.2.3",
@@ -20,6 +21,8 @@
     "@types/react-dom": "^19.0.4",
     "eslint": "^9.23.0",
     "eslint-config-next": "^15.2.3",
+    "prettier": "^3.5.3",
     "typescript": "^5.8.2"
-  }
+  },
+  "packageManager": "pnpm@6.2.2"
 }
